...
        app:layout_constraintBottom_toTopOf="@id/ly_confirm_sett"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ly_title_sett">

        <Switch
            android:id="@+id/switch_music_sett"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingTop="20dp"
            android:paddingEnd="0dp"
            android:paddingBottom="20dp"
            android:text="@string/str_backg_music_sett"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinn_backg_music_sett"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:spinnerMode="dialog" />

        <Switch
            android:id="@+id/switch_nightmode_sett"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingTop="20dp"
            android:paddingEnd="0dp"
            android:paddingBottom="20dp"
            android:text="@string/str_nightmode_sett"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/switch_physical_sett"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingTop="20dp"
            android:paddingEnd="0dp"
            android:paddingBottom="20dp"
...
            android:id="@+id/ly_username_sett"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_username_sett"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/str_username_sett" />

            <Button
                android:id="@+id/btn_username_save_sett"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/str_username_save_sett"
                android:textAlignment="center" />
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ly_buttons_sett">

        <Button
            android:id="@+id/btn_back_sett"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="90dp"
            android:background="@color/colorPrimary"
            android:text="@string/str_confirm"
            tools:layout_editor_absoluteX="14dp"
...
