...
                android:background="@color/colorPrimary"
                android:text="@string/str_textv_gamestatistic_stat"
                tools:layout_editor_absoluteX="14dp"
                tools:layout_editor_absoluteY="135dp" />

            <Button
                android:id="@+id/btn_settings_m"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
...
